JWT branch merge
